--- a/requirements.txt
+++ b/requirements.txt
@@ -9,6 +9,7 @@ flake8-for-pycharm==0.4.1
 isort==5.13.2
 mccabe==0.7.0
 platformdirs==4.1.0
+psycopg2-binary==2.9.9
 pycodestyle==2.11.1
 pyflakes==3.2.0
 pylint==3.0.3
