--- a/requirements.txt
+++ b/requirements.txt
@@ -8,6 +8,7 @@ flake8==7.0.0
 flake8-for-pycharm==0.4.1
 isort==5.13.2
 mccabe==0.7.0
+pillow==10.2.0
 platformdirs==4.1.0
 psycopg2-binary==2.9.9
 pycodestyle==2.11.1
