--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,10 @@
 asgiref==3.7.2
 astroid==3.0.2
+backports.zoneinfo==0.2.1
+colorama==0.4.6
 crispy-bootstrap5==2023.10
 dill==0.3.7
-
+Django==4.2.9
 django-crispy-forms==2.1
 django-debug-toolbar==4.2.0
 django-environ==0.11.2
@@ -18,4 +20,7 @@ pycodestyle==2.11.1
 pyflakes==3.2.0
 pylint==3.0.3
 sqlparse==0.4.4
+tomli==2.0.1
 tomlkit==0.12.3
+typing_extensions==4.9.0
+tzdata==2023.4
