--- a/requirements.txt
+++ b/requirements.txt
@@ -1,14 +1,18 @@
 asgiref==3.7.2
 astroid==3.0.2
+certifi==2023.11.17
+charset-normalizer==3.3.2
+colorama==0.4.6
 crispy-bootstrap5==2023.10
 dill==0.3.7
-Django==5.0.1
+Django==4.2.9
 django-crispy-forms==2.1
 django-debug-toolbar==4.2.0
 django-environ==0.11.2
 environ==1.0
 flake8==7.0.0
 flake8-for-pycharm==0.4.1
+idna==3.6
 isort==5.13.2
 mccabe==0.7.0
 pillow==10.2.0
@@ -17,5 +21,11 @@ psycopg2-binary==2.9.9
 pycodestyle==2.11.1
 pyflakes==3.2.0
 pylint==3.0.3
+requests==2.31.0
 sqlparse==0.4.4
+stripe==7.13.0
+tomli==2.0.1
 tomlkit==0.12.3
+typing_extensions==4.9.0
+tzdata==2023.4
+urllib3==2.1.0
