--- a/requirements.txt
+++ b/requirements.txt
@@ -1,27 +1,44 @@
+amqp==5.2.0
 asgiref==3.7.2
 astroid==3.0.2
+billiard==4.2.0
+celery==5.3.6
 certifi==2023.11.17
 charset-normalizer==3.3.2
+click==8.1.7
+click-didyoumean==0.3.0
+click-plugins==1.1.1
+click-repl==0.3.0
 colorama==0.4.6
 crispy-bootstrap5==2023.10
+cron_descriptor==1.4.0
 dill==0.3.7
 Django==4.2.9
+django-celery-beat==2.5.0
+django-celery-results==2.5.1
 django-crispy-forms==2.1
 django-debug-toolbar==4.2.0
 django-environ==0.11.2
+django-timezone-field==6.1.0
 environ==1.0
 flake8==7.0.0
 flake8-for-pycharm==0.4.1
 idna==3.6
 isort==5.13.2
+kombu==5.3.5
 mccabe==0.7.0
 pillow==10.2.0
 platformdirs==4.1.0
+prompt-toolkit==3.0.43
 psycopg2-binary==2.9.9
 pycodestyle==2.11.1
 pyflakes==3.2.0
 pylint==3.0.3
+python-crontab==3.0.0
+python-dateutil==2.8.2
+redis==5.0.1
 requests==2.31.0
+six==1.16.0
 sqlparse==0.4.4
 stripe==8.0.0
 tomli==2.0.1
@@ -29,3 +46,5 @@ tomlkit==0.12.3
 typing_extensions==4.9.0
 tzdata==2023.4
 urllib3==2.1.0
+vine==5.1.0
+wcwidth==0.2.13
