--- a/requirements.txt
+++ b/requirements.txt
@@ -20,6 +20,7 @@ django-crispy-forms==2.1
 django-debug-toolbar==4.2.0
 django-environ==0.11.2
 django-timezone-field==6.1.0
+djangorestframework==3.14.0
 environ==1.0
 flake8==7.0.0
 flake8-for-pycharm==0.4.1
@@ -36,6 +37,7 @@ pyflakes==3.2.0
 pylint==3.0.3
 python-crontab==3.0.0
 python-dateutil==2.8.2
+pytz==2023.4
 redis==5.0.1
 requests==2.31.0
 six==1.16.0
