--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,10 @@
 amqp==5.2.0
 asgiref==3.7.2
 astroid==3.0.2
+async-timeout==4.0.3
+backports.zoneinfo==0.2.1
 billiard==4.2.0
+black==24.1.1
 celery==5.3.6
 certifi==2023.11.17
 charset-normalizer==3.3.2
@@ -9,12 +12,6 @@ click==8.1.7
 click-didyoumean==0.3.0
 click-plugins==1.1.1
 click-repl==0.3.0
-backports.zoneinfo==0.2.1
-certifi==2023.11.17
-charset-normalizer==3.3.2
-backports.zoneinfo==0.2.1
-certifi==2023.11.17
-charset-normalizer==3.3.2
 colorama==0.4.6
 crispy-bootstrap5==2023.10
 cron_descriptor==1.4.0
@@ -34,6 +31,9 @@ idna==3.6
 isort==5.13.2
 kombu==5.3.5
 mccabe==0.7.0
+mypy-extensions==1.0.0
+packaging==23.2
+pathspec==0.12.1
 pillow==10.2.0
 platformdirs==4.1.0
 prompt-toolkit==3.0.43
@@ -47,10 +47,8 @@ pytz==2023.4
 redis==5.0.1
 requests==2.31.0
 six==1.16.0
-requests==2.31.0
-requests==2.31.0
 sqlparse==0.4.4
-stripe==8.0.0
+stripe==7.13.0
 tomli==2.0.1
 tomlkit==0.12.3
 typing_extensions==4.9.0
